--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
     "symbols.hidesExplorerArrows": false,
     "workbench.iconTheme": "symbols",
     "editor.fontFamily": "JetBrains Mono",
-    "editor.fontSize": 14,
+    "editor.fontSize": 16,
     "editor.lineHeight": 1.8,
     "editor.rulers": [80, 120],
     "workbench.startupEditor": "newUntitledFile",
@@ -15,5 +15,8 @@
     "editor.semanticHighlighting.enabled": false,
     "breadcrumbs.enabled": true,
     "workbench.activityBar.location": "side",
-    "editor.minimap.enabled": true
+    "editor.minimap.enabled": true,
+
+    // Python or django bullshit
+    "pylint.args": ["load-plugins=pylint_django"],
 }
